[gd_scene load_steps=37 format=3 uid="uid://brqlwhlevq2ud"]

[ext_resource type="Script" path="res://Escenas/PlayerInfo.gd" id="1_1e3su"]
[ext_resource type="Texture2D" uid="uid://cvoaoq5x7mn1q" path="res://Sprites PI/panel3.png" id="2_4vebo"]
[ext_resource type="Texture2D" uid="uid://du6ddabv8q25q" path="res://Sprites PI/barra2.png" id="2_gp35o"]
[ext_resource type="Texture2D" uid="uid://c4t00eniwnw0c" path="res://Sprites PI/FondoSeleccionN.png" id="4_e4he8"]
[ext_resource type="Texture2D" uid="uid://kfunruf7j0b1" path="res://Sprites PI/PlanetaMorado.png" id="5_2olp1"]
[ext_resource type="Texture2D" uid="uid://cqo1883acuqyn" path="res://Sprites PI/PlanetaFuego.png" id="6_30m8b"]
[ext_resource type="Texture2D" uid="uid://c8vhi7ejk41mp" path="res://Sprites PI/PlanetaAzul.png" id="7_dunvx"]
[ext_resource type="Texture2D" uid="uid://cch1fx05bvd45" path="res://Sprites PI/PlanetaLava.png" id="8_ctgyy"]
[ext_resource type="Texture2D" uid="uid://dw8tiu5fl1m27" path="res://Sprites PI/PlanetaRosa.png" id="9_ngvr4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g8edq"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0u2jf"]
bg_color = Color(0, 0.607843, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_48jo4"]
texture = ExtResource("2_gp35o")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w48xj"]
bg_color = Color(0.133333, 0.32549, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oh5ar"]
bg_color = Color(0.0235294, 0.0941176, 0.619608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vo10r"]
bg_color = Color(0.352941, 0.270588, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvm0o"]
bg_color = Color(0.352941, 0.270588, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xm3u"]
bg_color = Color(0.352941, 0.270588, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmhto"]
bg_color = Color(0.352941, 0.270588, 0.741176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqwvh"]
bg_color = Color(0.784314, 0.152941, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxp7l"]
bg_color = Color(0.6, 0.0431373, 0.0431373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2xki"]
bg_color = Color(0.6, 0.517647, 0.517647, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w7shm"]
texture = ExtResource("5_2olp1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4dyti"]
texture = ExtResource("5_2olp1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8fae8"]
texture = ExtResource("5_2olp1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_idoot"]
texture = ExtResource("6_30m8b")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7fpeu"]
texture = ExtResource("6_30m8b")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xfe5p"]
texture = ExtResource("6_30m8b")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rm2xt"]
texture = ExtResource("7_dunvx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5wtj7"]
texture = ExtResource("7_dunvx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k6m7u"]
texture = ExtResource("7_dunvx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gtd5b"]
texture = ExtResource("8_ctgyy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_edocx"]
texture = ExtResource("8_ctgyy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_npl03"]
texture = ExtResource("8_ctgyy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hxuvh"]
texture = ExtResource("9_ngvr4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r1taf"]
texture = ExtResource("9_ngvr4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fp1c5"]
texture = ExtResource("9_ngvr4")

[node name="PlayerInfo" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_1e3su")

[node name="vida_ProgressBar" type="ProgressBar" parent="."]
offset_left = 76.0
offset_top = 20.0
offset_right = 192.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 16
theme_override_styles/background = SubResource("StyleBoxFlat_g8edq")
theme_override_styles/fill = SubResource("StyleBoxFlat_0u2jf")
step = 1.0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="vida_ProgressBar"]
layout_mode = 0
offset_left = 39.0
offset_top = 2.0
offset_right = 79.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Vida"

[node name="botonPausa" type="Button" parent="."]
offset_left = 1032.0
offset_top = 13.0
offset_right = 1138.0
offset_bottom = 52.0
theme_override_styles/normal = SubResource("StyleBoxTexture_48jo4")
theme_override_styles/hover = SubResource("StyleBoxFlat_w48xj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oh5ar")
text = "PAUSA"

[node name="MenuOptions" type="Node2D" parent="."]
position = Vector2(363, 113)

[node name="Panel3" type="Sprite2D" parent="MenuOptions"]
position = Vector2(206, 215)
scale = Vector2(4.1, 4.48)
texture = ExtResource("2_4vebo")

[node name="Label" type="Label" parent="MenuOptions"]
offset_left = 150.0
offset_right = 251.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Pausa"

[node name="CONTINUAR" type="Button" parent="MenuOptions"]
offset_left = 130.0
offset_top = 100.0
offset_right = 280.0
offset_bottom = 135.0
theme_override_styles/normal = SubResource("StyleBoxFlat_vo10r")
text = "CONTINUAR"

[node name="REINICIAR" type="Button" parent="MenuOptions"]
offset_left = 130.0
offset_top = 180.0
offset_right = 280.0
offset_bottom = 215.0
theme_override_styles/normal = SubResource("StyleBoxFlat_uvm0o")
text = "REINICIAR"

[node name="CAMBIAR NIVEL" type="Button" parent="MenuOptions"]
offset_left = 130.0
offset_top = 260.0
offset_right = 280.0
offset_bottom = 295.0
theme_override_styles/normal = SubResource("StyleBoxFlat_3xm3u")
text = "ELEGIR NIVEL"

[node name="SALIR DEL JUEGO" type="Button" parent="MenuOptions"]
offset_left = 130.0
offset_top = 340.0
offset_right = 280.0
offset_bottom = 375.0
theme_override_styles/normal = SubResource("StyleBoxFlat_vmhto")
text = "SALIR DEL JUEGO"

[node name="SelectLevels" type="Node2D" parent="."]

[node name="FondoM" type="Sprite2D" parent="SelectLevels"]
position = Vector2(591, 241)
scale = Vector2(3, 3)
texture = ExtResource("4_e4he8")

[node name="regresar" type="Button" parent="SelectLevels"]
offset_right = 105.0
offset_bottom = 50.0
theme_override_styles/normal = SubResource("StyleBoxFlat_iqwvh")
theme_override_styles/hover = SubResource("StyleBoxFlat_qxp7l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p2xki")
text = "Regresar"

[node name="bnivel1" type="Button" parent="SelectLevels"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 495.0
offset_top = 226.0
offset_right = 687.0
offset_bottom = 419.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_w7shm")
theme_override_styles/hover = SubResource("StyleBoxTexture_4dyti")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8fae8")

[node name="bnivel2" type="Button" parent="SelectLevels"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 761.0
offset_top = 233.0
offset_right = 956.0
offset_bottom = 409.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_idoot")
theme_override_styles/hover = SubResource("StyleBoxTexture_7fpeu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xfe5p")

[node name="bnivel3" type="Button" parent="SelectLevels"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 211.0
offset_top = 231.0
offset_right = 411.0
offset_bottom = 409.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_rm2xt")
theme_override_styles/hover = SubResource("StyleBoxTexture_5wtj7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k6m7u")

[node name="bnivel4" type="Button" parent="SelectLevels"]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1199.0
offset_top = 25.0
offset_right = 1416.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_gtd5b")
theme_override_styles/hover = SubResource("StyleBoxTexture_edocx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_npl03")
text = "Nivel 4"

[node name="bnivel5" type="Button" parent="SelectLevels"]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1205.0
offset_top = 291.0
offset_right = 1415.0
offset_bottom = 483.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_hxuvh")
theme_override_styles/hover = SubResource("StyleBoxTexture_r1taf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fp1c5")
text = "Nivel 5"

[node name="Label" type="Label" parent="SelectLevels"]
offset_left = 330.0
offset_top = 96.0
offset_right = 890.0
offset_bottom = 182.0
theme_override_font_sizes/font_size = 60
text = "Selecciona un nivel"

[connection signal="pressed" from="botonPausa" to="." method="_on_boton_pausa_pressed"]
[connection signal="pressed" from="MenuOptions/CONTINUAR" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="MenuOptions/REINICIAR" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="MenuOptions/CAMBIAR NIVEL" to="." method="_on_cambiar_nivel_pressed"]
[connection signal="pressed" from="MenuOptions/SALIR DEL JUEGO" to="." method="_on_salir_del_juego_pressed"]
[connection signal="pressed" from="SelectLevels/regresar" to="." method="_on_regresar_pressed"]
[connection signal="pressed" from="SelectLevels/bnivel1" to="." method="_on_bnivel_1_pressed"]
[connection signal="pressed" from="SelectLevels/bnivel2" to="." method="_on_bnivel_2_pressed"]
[connection signal="pressed" from="SelectLevels/bnivel3" to="." method="_on_bnivel_3_pressed"]
[connection signal="pressed" from="SelectLevels/bnivel4" to="." method="_on_bnivel_4_pressed"]
[connection signal="pressed" from="SelectLevels/bnivel5" to="." method="_on_bnivel_5_pressed"]
